Mudanças realziadas nos arquivos js para encapsulamento de lógica e aplicação de OPP solicitada nos requisitos/ajuste de funções em cada arquivo para melhor manutenção de código/ melhoria na parte de adição de produtos/ tratamento de erros dentro dos métodos de renderização de grid de produtos

--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,10 @@ body {
     text-decoration: none;
 }
 
+.logo-btn {
+    text-decoration: none;
+}
+
 .nav-menu {
     display: flex;
     gap: 1.5rem;
