Criação da lógica e métodos que irão mostrar os detalhes do produto em uma nova página, utilizando o ID rastreado no click sendo passado pela URL conseguimos criar a página HTML para o produto que for

--- a/css/main.css
+++ b/css/main.css
@@ -205,9 +205,10 @@ body {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    text-decoration: none;
 }
 
-.product-info a {
+.open-product-page {
     text-decoration: none;
 }
 
